# aoc

./: .clangd
.devcontainer/: Dockerfile
2024/: CMakeLists.txt
2024/day1/cpp/: CMakeLists.txt  p1.cpp  p2.cpp
2024/day10/cpp/: CMakeLists.txt  p1.cpp  p2.cpp
2024/day11/cpp/: CMakeLists.txt  p1.cpp  p2.cpp
2024/day11/cpp/cmake/: cpp_warnings.cmake
2024/day12/cpp/: CMakeLists.txt  p1.cpp  p2.cpp
2024/day12/cpp/cmake/: cpp_warnings.cmake
2024/day2/cpp/: CMakeLists.txt  p1.cpp  p2.cpp
2024/day3/cpp/: CMakeLists.txt  p1.cpp  p2.cpp
2024/day4/cpp/: CMakeLists.txt  p1.cpp  p2.cpp
2024/day5/cpp/: CMakeLists.txt  p1.cpp  p2.cpp
2024/day6/cpp/: CMakeLists.txt  p1.cpp  p2.cpp
2024/day7/cpp/: CMakeLists.txt  p1.cpp  p2.cpp
2024/day8/cpp/: CMakeLists.txt  p1.cpp  p2.cpp
2024/day9/cpp/: CMakeLists.txt  p1.cpp  p2.cpp
