cmake_minimum_required(VERSION 3.30)
project(aoc CXX)

add_subdirectory(day1/cpp)
add_subdirectory(day2/cpp)
add_subdirectory(day3/cpp)
add_subdirectory(day4/cpp)
add_subdirectory(day5/cpp)
add_subdirectory(day6/cpp)
add_subdirectory(day7/cpp)
add_subdirectory(day8/cpp)
add_subdirectory(day9/cpp)
add_subdirectory(day10/cpp)
add_subdirectory(day11/cpp)
add_subdirectory(day12/cpp)
